# neo-papyrus

./: .gitignore  Cargo.toml  Makefile  README.md  Trunk.toml  hammer.eidtor.file_settings.gschema.xml  index.css  index.html  tailwind.config.js
src/: action.rs  layout.rs  lib.rs  main.rs  menu.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: avatar.rs  dropdown.rs  mod.rs
src/editor/: action.rs  index.css  main.rs  menu.rs  shortcuts.rs  util.rs  view.rs
src/editor/core/: dir.rs  markdown.rs  mod.rs
src/editor/core/parser/: markdown.rs
src/editor/widget/: mod.rs
src/editor/widget/document/: imp.rs  mod.rs
src/ui/: layout.rs  menu.rs  mod.rs  page.rs  page_header.rs  page_main.rs  sidebar.rs  switcher.rs
src/ui/page/: layout.rs  mod.rs
src/ui/page/header/: layout.rs  menu.rs  mod.rs
src/ui/page/main/: layout.rs  mod.rs
src/ui/siderbar/: layout.rs  menu.rs  mod.rs
