[package]
name = "neo-papyrus"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { version = "0.9.0", package = "gtk4", features = ["v4_6"] }

[dependencies.adw]
version = "0.7.0"
package = "libadwaita"
features = ["v1_1"]

[lib]
name = "common"
path = "src/lib.rs"

[[bin]]
name = "editor"
path = "src/editor/main.rs"
