[package]
name = "neo-papyrus"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { version = "0.9.0", package = "gtk4", features = ["v4_6"] }
uuid = { version = "1.10.0", features = ["v4"] }
adw = { version = "0.7.0", package = "libadwaita", features = ["v1_1"] }
glib = "0.20.0"
pulldown-cmark = { version = "0.11.0", default-features = false, features = ["simd"] }

[lib]
name = "common"
path = "src/lib.rs"

[[bin]]
name = "editor"
path = "src/editor/main.rs"
